# smartqua

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  partitions.csv  sdkconfig
.github/workflows/: cmake-single-platform.yml
api/: Basics.http  basics.http
co2_bottle_scale/: .eslintcache  package.json
co2_bottle_scale/src/: ApiService.js  App.js  Home.js  Navigation.js  Settings.js  home.js  index.js  manifest.json  scalecontext.js  settings.js  style.css  template.html
doc/: ideas.md
gui_smart_aq/: package.json
gui_smart_aq/src/: ApiService.js  App.js  Home.js
instances/: modernize-it.http  plant-lights.http  terrarium-first-try.http
main/: CMakeLists.txt  aq_main.cpp  aq_main.h  bottle_scale_main.cpp  build_config.h  data.h  device_types.h  devices.cpp  devices.h  devices_rest.h  ds18x20_driver.h  http_utils.h  json_utils.h  light_control.cpp  nvs_helper.h  pwm.cpp  pwm.h  pwm_rest.cpp  pwm_rest.h  ring_buffer.h  scale.h  scale_rest.cpp  scale_rest.h  settings.h  smartqua_config.h  store.h  thread_creator.h  thread_utils.h  utils.h  webserver.h  wifi_manager.h
main/actions/: action_types.h  device_actions.cpp  device_actions.h  setting_actions.h  soft_timer_actions.cpp  soft_timer_actions.h  stats_actions.cpp  stats_actions.h
main/drivers/:  bme280_driver.cpp  ads111x_driver.cpp  ads111x_driver.h  bme280_driver.h  dac_driver.cpp  dac_driver.h  device_resource.cpp  device_resource.h  device_types.h  devices.h  dhtxx_driver.cpp  dhtxx_driver.h  driver_interface.h  drv8825_driver.cpp  drv8825_driver.h  ds18x20_driver.cpp  ds18x20_driver.h  lamp_driver.cpp  lamp_driver.h  pcf8575_driver.cpp  pcf8575_driver.h  ph_probe_driver.cpp  ph_probe_driver.h  pico_device_driver.cpp  pico_device_driver.h  pin_driver.cpp  pin_driver.h  pwm.cpp  pwm.h  q30_driver.cpp  q30_driver.h  rmt_stepper_driver.cpp  scale.cpp  scale.h  scale_driver.cpp  scale_driver.h  schedule_driver.cpp  schedule_driver.h  setting_driver.h  setting_types.h  (+9 more)
main/network/: network_info.h  webserver.h  wifi_manager.h
main/rest/: devices_rest.cpp  devices_rest.h  pwm_rest.cpp  pwm_rest.h  scale_rest.cpp  scale_rest.h  soft_timers_rest.cpp  soft_timers_rest.h  stats_rest.cpp  stats_rest.h
main/storage/: dummy_storage.h  flash_storage.h  local_flash_storage.h  nvs_flash_utils.h  rest_storage.h  sd_filesystem.cpp  settings.h  store.h
main/utils/: check_assign.h  data_tesselation.h  enum_type_map.h  event_access_array.h  filesystem_utils.cpp  filesystem_utils.h  http_utils.cpp  http_utils.h  idf-utils.cpp  idf-utils.h  idf_utils.cpp  json_utils.h  large_buffer_pool.h  logger.cpp  logger.h  rest_client.h  ring_buffer.h  sample_container.h  schedule.h  sd_card_logger.cpp  sd_card_logger.h  sd_filesystem.cpp  sd_filesystem.h  ssl_credentials.h  stack_string.h  task_pool.h  thread_utils.h  time_utils.cpp  time_utils.h  utils.h  web_utils.cpp  web_utils.h
main/utils/container/: lookup_table.h  sample_container.h
main/webapp/: index.html
smartaq/: CMakeLists.txt  app_main.cpp  build_config.h  main_thread.cpp  main_thread.h  smartqua_config.h
smartaq/actions/: action_types.h  device_actions.cpp  device_actions.h  stats_actions.cpp  stats_actions.h
smartaq/drivers/:  bme280_driver.cpp  ads111x_driver.cpp  ads111x_driver.h  bme280_driver.cpp  bme280_driver.h  dac_driver.cpp  dac_driver.h  device_resource.cpp  device_resource.h  device_types.h  dhtxx_driver.cpp  dhtxx_driver.h  dosing_pump_driver.cpp  dosing_pump_driver.h  driver_interface.h  drv8825_driver.cpp  drv8825_driver.h  ds18x20_driver.cpp  ds18x20_driver.h  pcf8575_driver.cpp  pcf8575_driver.h  ph_probe_driver.cpp  ph_probe_driver.h  pico_device_driver.cpp  pico_device_driver.h  pin_driver.cpp  pin_driver.h  rmt_stepper_driver.cpp  rmt_stepper_driver.h  scale_driver.cpp  scale_driver.h  schedule_driver.cpp  schedule_driver.h  setting_types.h  stats_driver.h  stats_types.h  stepper_dosing_pump_driver.cpp  stepper_dosing_pump_driver.h  switch_driver.cpp  switch_driver.h  (+1 more)
smartaq/network/: webserver.h  wifi_manager.h
smartaq/rest/: devices_rest.cpp  devices_rest.h  stats_rest.cpp
smartaq/storage/: dummy_storage.h  flash_storage.h  local_flash_storage.h  nvs_flash_utils.h  rest_storage.h  sd_filesystem.cpp  settings.h  store.h
smartaq/utils/: call_on_destructor.h  check_assign.h  conditional_thread_safety.h  constexpr_for.h  do_finally.h  filesystem_utils.cpp  filesystem_utils.h  idf_utils.cpp  idf_utils.h  json_utils.h  large_buffer_pool.h  logger.h  schedule.h  ssl_credentials.h  stack_string.h  task_pool.h  thread_utils.h  time_utils.cpp  time_utils.h  trivial_variant.h  web_utils.cpp  web_utils.h
smartaq/utils/container/: bitset.h  event_access_array.h  fixed_size_optional_array.h  lookup_table.h  ring_buffer.h  sample_container.h
smartaq/utils/esp/: esp_filesystem_utils.h  esp_logger_utils.h  idf_utils.cpp  idf_utils.h  web_utils.cpp  web_utils.h
smartaq/utils/serialization/: json_utils.h
smartaq/utils/time/: day_schedule.h  schedule.h  schedule_tracker.h  schedule_tracker_types.h  time_utils.cpp  time_utils.h
tests/: CMakeLists.txt  basic_stack_string_tests.cpp  check_assign_tests.cpp  container_tests.cpp  day_schedule_tests.cpp  device_types_tests.cpp  fixed_size_optional_array_tests.cpp  lookup_table_tests.cpp  ring_buffer_tests.cpp  sample_container_tests.cpp  schedule_tests.cpp  schedule_tracker_tests.cpp  time_utils_tests.cpp
